tests/substructural/check/return_leak_ref_field_reports_once_via_nll_unborrow.err.expected
error: at 7:17: [INIT-RefObligationUnfulfilled] In function 'f', block 'entry': reference 's.r' has unfulfilled obligation here (is_init=true, ends_init=false)
   |
 7 |                 return
   |                 ^^^^^^
