tests/substructural/check/return_leak_ref_field_reports_once_via_nll_unborrow.sim

            struct S { r: &drop i64 }
            fn f(x: i64) {
              s: S;
              entry:
                s.r = &drop x;
                return
            }